# desktop-timetable

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
DesktopTimetable/: CMakeLists.txt
DesktopTimetable/src/: app.cpp  codec_converter.cpp  codec_converter.h  excel_marker.cpp  excel_marker.h  excel_reader.cpp  excel_reader.h  excel_template.cpp  excel_template.h  excel_writer.cpp  excel_writer.h  generate_frame.cpp  generate_frame.h  main_frame.cpp  main_frame.h  pair.cpp  pair.h  pair_list.cpp  pair_list.h  pair_list_frame.cpp  pair_list_frame.h  pair_manager.cpp  pair_manager.h  template_create_frame.cpp  template_create_frame.h  template_manager.cpp  template_manager.h  template_manager_frame.cpp  template_manager_frame.h  timetable.cpp  timetable.h  timetable_loader_frame.cpp  timetable_loader_frame.h  timetable_manager.cpp  timetable_manager.h  timetable_manager_frame.cpp  timetable_manager_frame.h
